--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "sass": "^1.77.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
