--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@tanstack/react-router": "^1.87.3",
     "framer-motion": "^11.3.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-timer-hook": "^3.0.8"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@tanstack/router-devtools": "^1.87.3",
