--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-router": "^1.87.3",
     "framer-motion": "^11.3.21",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
