--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@tanstack/react-router": "^1.87.3",
     "framer-motion": "^11.3.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@tanstack/router-devtools": "^1.87.3",
