--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@tanstack/react-query": "^5.62.10",
     "@tanstack/react-router": "^1.92.6",
     "framer-motion": "^11.3.21",
+    "openapi-fetch": "^0.13.3",
+    "openapi-react-query": "^0.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
