--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "recharts": "^2.15.0",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
