--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "@tanstack/react-query": "^5.62.10",
     "@tanstack/react-router": "^1.92.6",
     "framer-motion": "^11.3.21",
+    "i18next": "^24.2.0",
     "openapi-fetch": "^0.13.3",
     "openapi-react-query": "^0.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-i18next": "^15.4.0",
     "recharts": "^2.15.0",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@tanstack/router-devtools": "^1.87.3",
     "@tanstack/router-plugin": "^1.87.4",
+    "@types/i18next": "^13.0.0",
     "@types/react": "^18.3.3",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
