--- a/package.json
+++ b/package.json
@@ -10,22 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.2.5",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
     "@tanstack/react-query": "^5.62.10",
     "@tanstack/react-router": "^1.92.6",
-    "framer-motion": "^11.16.0",
     "i18next": "^24.2.0",
+    "next-themes": "^0.4.4",
     "openapi-fetch": "^0.13.3",
     "openapi-react-query": "^0.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-i18next": "^15.4.0",
+    "react-icons": "^5.4.0",
     "recharts": "^2.15.0",
     "swiper": "^11.1.15"
   },
