--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@tanstack/react-query": "^5.62.10",
     "@tanstack/react-router": "^1.92.6",
     "i18next": "^24.2.0",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
     "next-themes": "^0.4.4",
     "openapi-fetch": "^0.13.3",
     "openapi-react-query": "^0.2.8",
