--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@tanstack/react-query": "^5.62.10",
     "@tanstack/react-router": "^1.92.6",
+    "framer-motion": "^12.0.1",
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
