--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "recharts": "^2.15.0",
-    "swiper": "^11.1.15"
+    "swiper": "^11.1.15",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tanstack/router-devtools": "^1.87.3",
