--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.54.1",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
     "recharts": "^2.15.0",
     "swiper": "^11.1.15",
     "xlsx": "^0.18.5"
