--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
+    "jszip": "^3.10.1",
     "next-themes": "^0.4.4",
     "openapi-fetch": "^0.13.3",
     "openapi-react-query": "^0.2.8",
