--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.62.10",
     "@tanstack/react-router": "^1.92.6",
     "framer-motion": "^12.0.1",
+    "html2canvas": "^1.4.1",
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
