--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.0",
     "@tanstack/react-query": "^5.62.10",
     "@tanstack/react-router": "^1.92.6",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.0.1",
     "html2canvas": "^1.4.1",
     "i18next": "^24.2.0",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@tanstack/router-devtools": "^1.87.3",
     "@tanstack/router-plugin": "^1.87.4",
+    "@types/file-saver": "^2.0.7",
     "@types/i18next": "^13.0.0",
     "@types/react": "^18.3.3",
     "@types/react-beautiful-dnd": "^13.1.8",
